force-app/main/default/objects/KimbleOne__ProductDomain__c/KimbleOne__ProductDomain__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Product Domain</label>
    <nameField>
        <label>Product Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Domains</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>