force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__CanOverrideRates__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanOverrideRates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Override Rates</label>
    <type>Checkbox</type>
</CustomField>