force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__CostForecastMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostForecastMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Forecast Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>CostForecastMode</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Cost Forecast Mode)</relationshipLabel>
    <relationshipName>ProductDomainsCostForecastMode</relationshipName>
    <type>Lookup</type>
</CustomField>