force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__CostGenerationModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostGenerationModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Generation Model</label>
    <referenceTo>KimbleOne__CostGenerationModel__c</referenceTo>
    <relationshipLabel>Product Domains</relationshipLabel>
    <relationshipName>ProductDomainsCostGenerationModel</relationshipName>
    <type>Lookup</type>
</CustomField>