force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__DomainClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DomainClass__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Domain Class</label>
    <referenceTo>KimbleOne__DomainClass__c</referenceTo>
    <relationshipLabel>Product Domains</relationshipLabel>
    <relationshipName>ProductDomains</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>