force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__EnforcePayableDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnforcePayableDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Payable Date</label>
    <type>Checkbox</type>
</CustomField>