force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__EnforceReceivableDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnforceReceivableDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Receivable Date</label>
    <type>Checkbox</type>
</CustomField>