force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__HasServiceContract__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasServiceContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Service Contract?</label>
    <type>Checkbox</type>
</CustomField>