force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__HideInDelivery__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HideInDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide In Delivery?</label>
    <type>Checkbox</type>
</CustomField>