force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__InvoicingCanIncludeZeroRevenueItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCanIncludeZeroRevenueItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Zero Revenue Items</label>
    <type>Checkbox</type>
</CustomField>