force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__InvoicingOffsetPeriodType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingOffsetPeriodType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Offset Period Type</label>
    <referenceTo>KimbleOne__PeriodType__c</referenceTo>
    <relationshipLabel>Product Domains (Invoicing Offset Period Type)</relationshipLabel>
    <relationshipName>ProductDomainsInvoicingOffsetPeriodType</relationshipName>
    <type>Lookup</type>
</CustomField>