force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__InvoicingPoint__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Point</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoicingPoint</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Invoicing Point)</relationshipLabel>
    <relationshipName>ProductDomainsInvoicingPoint</relationshipName>
    <type>Lookup</type>
</CustomField>