force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__InvoicingReferenceDateRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingReferenceDateRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Reference Date Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoicingReferenceDateRule</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Invoicing Reference Date Rule)</relationshipLabel>
    <relationshipName>ProductDomainsInvoicingReferenceDateRule</relationshipName>
    <type>Lookup</type>
</CustomField>