force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__IsResourced__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsResourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resourced</label>
    <type>Checkbox</type>
</CustomField>