force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableNumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableNumberOfPeriods__c</fullName>
    <label>Payable Number Of Periods</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>