force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableProcessModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableProcessModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Payable Process Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoicingModel</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Payable Process Model)</relationshipLabel>
    <relationshipName>ProductDomainsPayableProcessModel</relationshipName>
    <type>Lookup</type>
</CustomField>