force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableProcessOffsetNumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableProcessOffsetNumberOfPeriods__c</fullName>
    <label>Payable Process Offset Periods</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>