force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableProcessOffsetPeriodType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableProcessOffsetPeriodType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Process Offset Period Type</label>
    <referenceTo>KimbleOne__PeriodType__c</referenceTo>
    <relationshipLabel>Product Domains (Payable Process Offset Period Type)</relationshipLabel>
    <relationshipName>ProductDomainsPayableProcessPeriodType</relationshipName>
    <type>Lookup</type>
</CustomField>