force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableProcessPoint__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableProcessPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Process Point</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoicingPoint</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Payable Process Point)</relationshipLabel>
    <relationshipName>ProductDomainsPayableProcessPoint</relationshipName>
    <type>Lookup</type>
</CustomField>