force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableProcessReferenceDateRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableProcessReferenceDateRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Process Reference Date Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoicingReferenceDateRule</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Payable Process Reference Date Rule)</relationshipLabel>
    <relationshipName>ProductDomainsPayableProcessRefDateRule</relationshipName>
    <type>Lookup</type>
</CustomField>