force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__PayableProcessRequiresCompletion__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PayableProcessRequiresCompletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payable Process Requires Completion</label>
    <type>Checkbox</type>
</CustomField>