force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__RevenueForecastMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueForecastMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Forecast Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RevenueForecastMode</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (RevenueForecast Mode)</relationshipLabel>
    <relationshipName>ProductDomainsForecastMode</relationshipName>
    <type>Lookup</type>
</CustomField>