force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__RevenueRecognitionModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueRecognitionModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Recognition Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RevenueRecognitionModel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Revenue Recognition Model)</relationshipLabel>
    <relationshipName>ProductDomainsRevenueRecognitionModel</relationshipName>
    <type>Lookup</type>
</CustomField>