force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__SourceElementFieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SourceElementFieldName__c</fullName>
    <label>SourceElementFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>