force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__UsageAllocationModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageAllocationModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Allocation Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>UsageAllocationModel</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Usage Allocation Model)</relationshipLabel>
    <relationshipName>ProductDomainsUsageAllocationModel</relationshipName>
    <type>Lookup</type>
</CustomField>