force-app/main/default/objects/KimbleOne__ProductDomain__c/fields/KimbleOne__UsageForecastMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageForecastMode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Forecast Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>UsageForecastMode</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product Domains (Usage Forecast Mode)</relationshipLabel>
    <relationshipName>ProductDomains</relationshipName>
    <type>Lookup</type>
</CustomField>