force-app/main/default/objects/KimbleOne__ProductDomain__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__RevenueGenerationModel__c</columns>
    <columns>KimbleOne__CostForecastMode__c</columns>
    <columns>KimbleOne__UsageForecastMode__c</columns>
    <columns>KimbleOne__CostGenerationModel__c</columns>
    <columns>KimbleOne__CostRecognitionModel__c</columns>
    <columns>KimbleOne__CostAllocationModel__c</columns>
    <columns>KimbleOne__RevenueForecastMode__c</columns>
    <columns>KimbleOne__RevenueRecognitionModel__c</columns>
    <columns>KimbleOne__RevenueAllocationModel__c</columns>
    <columns>KimbleOne__DomainClass__c</columns>
    <columns>KimbleOne__IsSupplierRequisitioned__c</columns>
    <columns>KimbleOne__SourceElementFieldName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>